<resources>
    <string name="app_name">HadTo</string>
    <string name="restText">휴식</string>
    <string name="cancelText">취소/끝</string>
    <string name="startText">시작</string>

    <string name="timerNumCode">%1$02d:%2$02d:%3$02d</string>
    <string name="timerZeroText">00:00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="timerTapText">타이머</string>
    <string name="graphTapText">그래프</string>
    <string name="treeTapText">나무</string>
    <string name="introMainHiText">Hi, 반갑습니다.</string>
    <string name="select">이 중에 하나를 선택해주세요</string>



</resources>